fixing overflow

--- a/css.css
+++ b/css.css
@@ -1,7 +1,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito&family=Nunito+Sans:wght@300&display=swap');
 
-html{background-color: #f6f9fe}
+html{
+    background-color: #f6f9fe;
+    overflow-x: hidden;
+}
 
 header{
     padding: 50px;
